<resources>
    <!--<string name="app_name">Share &amp; Care Admin</string>-->
    <string name="app_name">ENGO ADMIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="volunteer">Volunteer</string>
    <string name="admin">Admin</string>
    <string name="login_btn">Login</string>
    <string name="goto_signup">New user?</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="forgot_password_msg">Please Provide your email ID. we will send you reset email on your mail</string>
    <string name="send_mail">Send Mail</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="area">Area</string>
    <string name="search">Search</string>

</resources>
